add upload photo in category (not different sizes)

--- a/SparrowAPI.Api/appsettings.json
+++ b/SparrowAPI.Api/appsettings.json
@@ -23,7 +23,7 @@
     "URL": "https://localhost:5001"
   },
   "ImageSettings": {
-    "ImagePath": "/images/posts"
+    "ImagePathCategories": "/images/categories"
   },
   "AllowedHosts": "*"
 }
