--- a/SparrowAPI.Api/SparrowAPI.Api.csproj
+++ b/SparrowAPI.Api/SparrowAPI.Api.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\SparrowAPI.Infrastructure\SparrowAPI.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\categories\" />
+  </ItemGroup>
+
 </Project>
