add upload photo for users (not different sizes)

--- a/SparrowAPI.Api/SparrowAPI.Api.csproj
+++ b/SparrowAPI.Api/SparrowAPI.Api.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\categories\" />
+    <Folder Include="wwwroot\images\users\" />
   </ItemGroup>
 
 </Project>
