--- a/SparrowAPI.Api/appsettings.json
+++ b/SparrowAPI.Api/appsettings.json
@@ -23,7 +23,8 @@
     "URL": "https://localhost:5001"
   },
   "ImageSettings": {
-    "ImagePathCategories": "/images/categories"
+    "ImagePathCategories": "/images/categories",
+    "ImagePathUsers":  "/images/users"
   },
   "AllowedHosts": "*"
 }
